<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_playlist"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/image_sample"
            android:contentDescription="@string/playlist_title" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_playlist_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/t"
        android:fontFamily="@font/fjalla_one"
        android:textStyle="normal"
        android:textFontWeight="400"
        android:layout_marginHorizontal="20.11dp"
        android:textColor="@color/dark_gray"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cardView"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="p" />

    <ImageView
        android:id="@+id/iv_checked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_check"
        android:visibility="gone"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/cardView"
        app:layout_constraintTop_toBottomOf="@id/tv_playlist_title"
        android:contentDescription="@string/image" />
    <TextView
        android:id="@+id/tv_duration_of_video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/downloaded"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/noto_sans"
        android:textFontWeight="500"
        android:lineHeight="16.34dp"
        android:textSize="12sp"
        android:textColor="@color/light_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_checked"
        app:layout_constraintTop_toBottomOf="@id/tv_playlist_title"
        tools:targetApi="28"/>

</androidx.constraintlayout.widget.ConstraintLayout>