<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/custom_white"
    tools:context="ui.playlist.PlaylistFragment">

    <RelativeLayout
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_centerVertical="true"
            android:contentDescription="@string/image"
            android:src="@drawable/ic_arrow" />

        <TextView
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="5.5dp"
            android:layout_toEndOf="@id/imageView2"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/sf_ui_display_regular"
            android:letterSpacing="0.02"
            android:lineHeight="22dp"
            android:lineSpacingExtra="2sp"
            android:text="@string/back"
            android:textColor="#B71C1C"
            android:textSize="17sp"
            android:translationY="-0.86sp"
            tools:targetApi="p" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/sf_pro_display_regular"
            android:letterSpacing="0.02"
            android:lineHeight="24dp"
            android:lineSpacingExtra="2sp"
            android:text="@string/playlist_P"
            android:textColor="@color/orange"
            android:textFontWeight="500"
            android:textSize="20sp"
            android:translationY="-0.86sp"
            tools:targetApi="p" />
    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_main"
        android:layout_width="match_parent"
        android:visibility="visible"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line1">

        <LinearLayout
            android:id="@id/line3"
            android:layout_width="match_parent"
            android:layout_height="196dp"
            android:background="@color/dirty_white"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_playlist_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/fjalla_one"
                android:lineHeight="30.16dp"
                android:text="@string/emotional"
                android:textColor="@color/dark_gray"
                android:textFontWeight="400"
                android:textSize="24sp"
                android:textStyle="normal"
                tools:targetApi="p" />

            <ScrollView
                android:id="@+id/sv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/dirty_white"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/noto_sans"
                        android:lineHeight="20.43dp"
                        android:text="@string/in_this_series"
                        android:textColor="@color/light_dark_two"
                        android:textFontWeight="400"
                        android:textSize="15sp"
                        tools:targetApi="p" />
                </LinearLayout>
            </ScrollView>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_count_of_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/noto_sans"
            android:lineHeight="16.34dp"
            android:text="@string/videos"
            android:textColor="@color/light_dark_one"
            android:textFontWeight="400"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line3"
            tools:targetApi="28" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/orange"
            android:clickable="true"
            android:contentDescription="@string/play"
            android:focusable="true"
            android:src="@drawable/ic_play_arrow"
            app:layout_constraintBottom_toTopOf="@id/tv_count_of_video"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line3" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rec"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_count_of_video"
            tools:listitem="@layout/item_playlist" />

        <RelativeLayout
            android:id="@+id/line_loading_playlist"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_count_of_video"
            android:visibility="visible">

            <ProgressBar
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:indeterminateDrawable="@drawable/cab_1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/load"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:id="@+id/line_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progress_circular"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:indeterminateDrawable="@drawable/cab_1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/load"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>