<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="ui.videodetail.VideoDetailFragment">

    <RelativeLayout
        android:id="@+id/rl"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_centerVertical="true"
            android:contentDescription="@string/image"
            android:src="@drawable/ic_arrow" />

        <TextView
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="5.5dp"
            android:layout_toEndOf="@id/imageView2"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/sf_ui_display_regular"
            android:letterSpacing="0.02"
            android:lineHeight="22dp"
            android:lineSpacingExtra="2sp"
            android:text="@string/back"
            android:textColor="#B71C1C"
            android:textSize="17sp"
            android:translationY="-0.86sp"
            tools:targetApi="p" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/sf_pro_display_regular"
            android:letterSpacing="0.02"
            android:lineHeight="24dp"
            android:lineSpacingExtra="2sp"
            android:text="@string/playlist_P"
            android:textColor="@color/orange"
            android:textFontWeight="500"
            android:textSize="20sp"
            android:translationY="-0.86sp"
            tools:targetApi="p" />
    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rl">

        <ImageView
            android:id="@+id/iv_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_skip_next"
            android:layout_marginEnd="56dp"
            android:elevation="24dp"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/iv_video"
            app:layout_constraintBottom_toBottomOf="@id/iv_video"
            android:contentDescription="@string/image"/>

        <ImageView
            android:id="@+id/iv_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_play_arrow"
            android:elevation="24dp"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/iv_video"
            app:layout_constraintBottom_toBottomOf="@id/iv_video"
            android:contentDescription="@string/image" />

        <ImageView
            android:id="@+id/iv_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="28dp"
            android:src="@drawable/ic_baseline_no_skip_previous"
            android:layout_marginStart="56dp"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/iv_video"
            app:layout_constraintBottom_toBottomOf="@id/iv_video"
            android:contentDescription="@string/image"/>

        <ImageView
            android:id="@+id/iv_video"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:src="@drawable/image_sample"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/image"/>

        <TextView
            android:id="@+id/tv_video_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/fjalla_one"
            android:lineHeight="25.14dp"
            android:text="@string/emotional"
            android:textColor="@color/dark_gray"
            android:textFontWeight="400"
            android:textSize="20sp"
            android:textStyle="normal"
            tools:targetApi="p"
            app:layout_constraintTop_toBottomOf="@id/iv_video"/>

        <Button
            android:id="@+id/btn_download"
            android:layout_width="141dp"
            android:layout_height="wrap_content"
            android:text="@string/download"
            android:textColor="@color/orange"
            android:fontFamily="@font/noto_sans"
            android:lineHeight="20.43dp"
            android:textFontWeight="400"
            android:padding="8dp"
            android:clickable="true"
            android:focusable="true"
            android:drawableEnd="@drawable/ic_download"
            android:textSize="15sp"
            tools:targetApi="p"
            android:background="@drawable/button_shape"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_video_title"/>

        <ScrollView
            android:id="@+id/sv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/btn_download"
            app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/dirty_white"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:autoLink="web"
                    android:text="@string/in_this_series"
                    android:textColor="@color/light_dark_two"
                    android:fontFamily="@font/noto_sans"
                    android:lineHeight="21.79dp"
                    android:textFontWeight="400"
                    android:textSize="16sp"
                    tools:targetApi="p" />
            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:id="@+id/line_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progress_circular"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:indeterminateDrawable="@drawable/cab_1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/load"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>